# cpp-tp-link-checker

./: .gitignore  CMakeLists.txt  README.md
data/: input.txt
output/: output_2025-04-01 20.18.25.txt
src/: common.h  logger.h  main.cpp  parser_cli.h  url_handler.cpp  url_handler.h  urls_dispenser.cpp  urls_dispenser.h  web_page.cpp  web_page.h
